--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body {
     font-family: "Raleway", sans-serif;
     color: black;
     margin-top: 0px;
-    margin-left: 10px;   
-    margin-right: 10px;
-    padding-left: 100px;
-    padding-right: 100px;
+    margin-left: 5px;   
+    margin-right: 5px;
+    margin-bottom: 0px;
+    padding-left: 1px;
+    padding-right: 1px;
+    padding-top: 0px;
 }
 ul {
     list-style-type: none;
@@ -55,7 +57,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items:center;
-    padding: 20px;
+    padding: 15px;
 }
 nav ul {
     display: flex;
@@ -290,9 +292,17 @@ section {
     border-top-right-radius: 25%;
 }
 
+
 /* Footer */
-.footer_items {
+.footer {
     width: 100%;
     background: #F2F2F2;
     display: flex;
+    justify-content: space-between;
+    text-align: left;
+    margin-top: 10%;
 }
+.footer a:hover {
+    color: #0065ff;
+  }
+  
