--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* Police */
 @font-face {
-    font-family: "Raleway";
-    src: url(fonts/Raleway/static/Raleway-Regular.ttf);
+    font-family: 'Roboto', sans-serif;
 }
 /* Icons */
 .icon_map { 
@@ -13,28 +12,32 @@ width: 40%;
   justify-content: center;
 }
 .icon_info { 
-width: 60px;
+    width: 15px;
+    height: 15px;
   border-radius: 20px 20px 20px 20px;
   background-color: #0065ff;
   color: white;
   display: flex;
   align-items: center;
-  justify-content: center;
-    
+  justify-content: center; 
 }
    
 /* Body */
 body {
-    font-family: "Raleway", sans-serif;
+    width: auto;
+    font-family: 'Roboto', sans-serif;
     color: black;
-    margin-top: 0px;
-    margin-left: 5px;   
-    margin-right: 5px;
-    margin-bottom: 0px;
-    padding-left: 1px;
-    padding-right: 1px;
-    padding-top: 0px;
+    background-color: lawngreen;
+    padding: 10px 10px 0px 10px;
+    margin: 0px 10px 0px 10px;
 }
+
+
+
+h1, h2 {
+    font-weight: bold, normal;
+}
+
 ul {
     list-style-type: none;
     }
@@ -44,7 +47,7 @@ a {
 }
 /* Header*/
 header {
-    width: 100%;
+    max-width: 100%;
 }
 .registration {
     color: #0065FC;
@@ -76,6 +79,7 @@ nav li {
 
 /* Search */
 .search form {
+    max-width: 100%;
     border: #F2F2F2;
     width: 40%; 
     display: flex;
@@ -100,17 +104,24 @@ nav li {
     justify-content: center;
     align-items: center;
 }
+.research_information {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;  
+}
+
 /* Filters */
+
 .filters p{
     font-weight: 700
 }
 
-.filters_list{
+.filters_list {
     display: flex;
     list-style: none;
 }
 
-.filters_list i{
+.filters_list i {
     padding: 15px;
     color: #0065FC;
     background-color: #DEEBFF;
@@ -119,7 +130,7 @@ nav li {
     margin-right: 10px;
 }
 
-.filters_list li{
+.filters_list li {
     font-weight: 600;
     border: solid 2px #e2e2e2;
     border-radius: 25px;
@@ -127,99 +138,94 @@ nav li {
     margin-right: 15px;
 }
 
-.filters_list li:hover{
+.filters_list li:hover {
     color: #0065FC;
     border: solid 2px #0065FC;
     cursor: pointer;
     transition: ease 0.3s;
 }
-
-.research_information{
+.info {
     display: flex;
-    align-items: center;
-    margin-bottom: 50px;  
 }
+
 /* Main_content */
+
 section {
+    max-width: 100%;
     background-color: #F2F2F2;
     border-radius: 25px;
-    margin: auto;
-    padding: auto;
+    margin: 10px, 10px, 10px, 10px;
 }
 .accomodation_and_most_popular { 
-  display: flex;  
-  justify-content:space-between;
-  background-color: blueviolet;;
+    width: 100%;
+    max-height: 100%;
+    display: flex; 
+    margin: 0px 5px 0px 5px; 
+    padding: 20px;
+    background-color: blueviolet;
 }
 /* Accomodation */
 #Accomodation {
-    border: solid white 5px;
-    display: flex;
-    border-top-left-radius: 5%;
-    border-top-right-radius: 5%;
-    margin-left: 10px;   
-    margin-right: 10px;
-    padding-left: 100px;
-    padding-right: 100px;
+    background-color: forestgreen;
 }
 .Accomodation_bloc {
-    margin: auto;
-    padding: auto;
+    background-color: firebrick;
+    width: 70%;
     height: 100%;
-    width: 75%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 75%;
     border-radius: 5%;
+    padding: 10px 10px 0px 10px;
+    margin: 0px 10px 0px 10px;
 }
 .Accomodation_bloc1 {
-    margin: auto;
-    padding: auto;
+    display:flex;
+    justify-content: space-between;
+    background-color: indianred;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
+
 }
 .Accomodation_bloc2 {
-    margin: auto;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
+    background-color: indianred;
 }
 .Accomodation_bloc3 {
-    margin: auto;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
+    background-color: indianred;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
 }
 .Accomodation_bloc4 {
-    margin: auto;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
+    background-color: indianred;
 }
 .Accomodation_bloc5 {
-    margin: auto;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
+    background-color: indianred;
 }
 .Accomodation_bloc6 {
-    object-fit: cover;
-    margin: auto;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background: white;
     border-radius: 5%;
+    background-color: indianred;
+    margin: 40px;
+    padding: 40px;
 }
 .accomodation_images {
     object-fit: cover;
-    width: 100px;   
-    height: 100px;
     border: solid white 5px;
     border-top-left-radius: 25%;
     border-top-right-radius: 25%;
@@ -227,54 +233,56 @@ section {
 /* Most_popular */
 #most_popular { 
     max-width: 100%;
-    height: 100%;
-    background-color:#F2F2F2;
+    max-height: 100%;
+    background-color:lightsalmon;
     max-width: 15;
+    padding-right: 20px
 }
 .most_popular_h2 {
-    margin: 20px;
+    font-weight: bold;
     display: flex;
     justify-content: space-between;
 }
 .most_popular_bloc {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 75%;
     border-radius: 5%;
+    padding-right: 20px;
+    margin: 20px 20px 20px 0px;
 }
+
 
 .most_popular_images {
     object-fit: cover;
-    width: 100px;   
-    height: 100px;
     border: solid white 5px;
     border-top-left-radius: 25%;
-    border-top-right-radius: 25%;
+    border-bottom-left-radius: 25%;
+    margin: 5px;
+    padding: 5px;
 }
 .most_popular_bloc1 {
-    display: flex;
-    margin: 20px;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
 }
 .most_popular_bloc2 {
-    display: flex;
-    margin: 20px;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
 }
 .most_popular_bloc3 {
-    display: flex;
-    margin: 20px;
-    padding: auto;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     background: white;
     border-radius: 5%;
+    margin: 40px;
+    padding: 40px;
 }
 
 
@@ -285,9 +293,8 @@ section {
     background-color: white;
 }
 .activities_images {
-    max-width: 25%;
-    width: 100px;   
-    height: 100px;
+    object-fit: cover;
+    border: solid white 5px;
     border-top-left-radius: 25%;
     border-top-right-radius: 25%;
 }
